initial commit with basic working site

--- a/_assets/scss/app.scss
+++ b/_assets/scss/app.scss
@@ -15,6 +15,9 @@
 //---------------------------------------------- 
 @import 'fonts/_roboto';
 @import 'fonts/_lora';
+@import 'fonts/_josefin_slab';
+@import 'fonts/_marcellus';
+@import 'fonts/_trirong';
 @import 'fonts/_icons';
 
 //----------------------------------------------
