--- a/_assets/scss/regions/_footer.scss
+++ b/_assets/scss/regions/_footer.scss
@@ -6,6 +6,8 @@
   background-color: $color-black;
   border-top: $border;
 
+  font-family: $font-nav
+
   &__container {
     margin-top: 3em;
   }
