--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a class="header__title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>
+  <a class="header__title" href="{{ '/' | absolute_url }}"><img src="{{ '/' | absolute_url }}breadiquette.svg"></img></a>
 
   {% include navigation.html %}
 </header>
